<resources>
    <string name="app_name">Credium</string>

    <!-- Short text -->
    <string name="dashboard">Dashboard</string>
    <string name="portfolio">Portfolio</string>
    <string name="market">Market</string>
    <string name="loan">Loan</string>
    <string name="loans">Loans</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="reset_mockup">Reset mockup</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="details">Details</string>
    <string name="import_loans">Import Loans</string>
    <string name="status">Status:</string>
    <string name="cash">Cash</string>
    <string name="unlock_loan">Unlock Loan</string>
    <string name="loading">Loading…</string>
    <string name="scan_barcode_prompt">Scan a barcode</string>

    <!-- Empty states -->
    <string name="coming_soon">Coming soon</string>
    <string name="no_loans">Nothing here. Import some loans.</string>

    <!-- Descriptions -->
    <string name="profile_image_desc">Profile image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>

    <!-- Templates -->
    <string name="amount_and_currency_template">%1$s %2$s</string>
    <string name="locked_loan_template_title">%1$s %2$s (Locked)</string>
    <string name="unlocked_loan_template_title">%1$s %2$s (Unlocked)</string>
    <string name="loan_subtitle1">%1$s %2$s per month</string>
    <string name="loan_pending">%1$s note pending sell for %2$s</string>
    <string name="loans_imported_template">%1$s loans imported</string>
    <string name="loans_imported_total_value_template">Total value is %1$s</string>

    <!-- Static text -->
    <string name="enable_camera_permission">Please enable camera permission</string>
    <string name="splash_version">v0.4.05</string>
    <string name="splash_version_date">Nov 27, 2017</string>
    <string name="import_loans_title">Import loans from the following lending platform</string>
    <string name="loans_imported_successfully">Loans imported successfully</string>
    <string name="import_loans_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="importing_loans_title">Importing loans…</string>
    <string name="importing_loans_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="loan_details_static">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="locked_loan_notes_description">You need to unlock this loan to sell its notes</string>
    <string name="unlock">Unlock</string>
    <string name="risk_score_description_static">%89 of loans with similar risk data were returned with no default</string>
    <string name="risk_score_title">Risk Score:</string>
    <string name="calculate_risk_button">Calculate Risk (5$)</string>
    <string name="risk_model">Risk model</string>
    <string name="risk_description_static">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="calculate_risk">Calculate Risk</string>
    <string name="risk_percentage_static">89%</string>
    <string name="of">of</string>
    <string name="how_much_would_you_like_to_sell">How much would you like to sell?</string>
    <string name="discount">Discount</string>
    <string name="what_discount_markup_would_you_like_to_set">What discount/markup would you like to set?</string>
    <string name="loans_with_same_data_that_were_sold_within_a_week">Loans with same data that were sold within a week:</string>
    <string name="submit_sell_order">Submit Sell Order</string>
    <string name="sell_orders">Sell orders</string>
    <string name="risk_management">Risk management</string>
    <string name="cash_flow">Cash flow</string>
    <string name="search">Search</string>
    <string name="value">Value</string>
    <string name="payout_forecast">Payout forecast</string>
    <string name="histogram_of_risk_management">Histogram of risk management</string>
    <string name="risk_score">Risk Score</string>
    <string name="score_change">Score Change</string>
    <string name="apr">APR</string>

    <plurals name="loan_subtitle2">
        <item quantity="one">One month left</item>
        <item quantity="other">%d months left</item>
    </plurals>
</resources>
