<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navDashboard"
            android:icon="@drawable/ic_nav_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/navNotes"
            android:icon="@drawable/ic_nav_notes"
            android:title="@string/notes" />
        <item
            android:id="@+id/navLoans"
            android:icon="@drawable/ic_nav_loans"
            android:title="@string/loans" />
    </group>

    <group
        android:id="@+id/settingsGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navResetMockup"
            android:icon="@drawable/ic_nav_reset_mockup"
            android:title="@string/reset_mockup" />
    </group>

</menu>
