<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loanAmountTitleText"
        style="@style/LargeTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="1000 USD" />

    <TextView
        android:id="@+id/loanAmountDescriptionText"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="50 USD per month, 20 months left" />

    <TextView
        style="@style/LargeTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details" />

    <TextView
        android:id="@+id/detailsDescriptionText"
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loan_details_static" />

    <TextView
        style="@style/LargeTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes" />

    <TextView
        style="@style/DescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locked_loan_notes_description" />

</LinearLayout>
