<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/inactiveControlLightColor"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/margin_default"
    android:paddingTop="@dimen/margin_default">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/monthShortText"
            style="@style/RiskInfoLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apr"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/monthPercentageText"
            style="@style/RiskInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="13%" />

    </LinearLayout>

    <include layout="@layout/view_risk_info_vertical_separator" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/riskScoreText"
            style="@style/RiskInfoLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/risk_score" />

        <TextView
            android:id="@+id/riskScorePercentageText"
            style="@style/RiskInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="89%" />

    </LinearLayout>

    <include layout="@layout/view_risk_info_vertical_separator" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            style="@style/RiskInfoLightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/score_change" />

        <ImageView
            android:id="@+id/scoreChangeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="6dp"
            tools:src="@drawable/shape_score_normal" />

    </LinearLayout>

</LinearLayout>