<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/howMuchSellText"
        style="@style/MediumTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/how_much_would_you_like_to_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sellAmountText"
        style="@style/DescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:textAlignment="center"
        android:textSize="@dimen/descriptionMediumTextSize"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ofStaticText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howMuchSellText"
        android:text="600"
        tools:text="600" />

    <TextView
        android:id="@+id/ofStaticText"
        style="@style/DescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/of"
        app:layout_constraintBottom_toBottomOf="@+id/sellAmountText"
        app:layout_constraintEnd_toStartOf="@+id/amountText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sellAmountText"
        app:layout_constraintTop_toBottomOf="@+id/howMuchSellText" />

    <TextView
        android:id="@+id/amountText"
        style="@style/AccentDarkLargeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/ofStaticText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ofStaticText"
        app:layout_constraintTop_toBottomOf="@+id/howMuchSellText"
        tools:text="1000 USD" />

    <SeekBar
        android:id="@+id/amountSeekBar"
        style="@style/DefaultSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:progress="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ofStaticText" />

    <TextView
        android:id="@+id/howMuchSellText2"
        style="@style/MediumTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/what_discount_markup_would_you_like_to_set"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountSeekBar" />

    <SeekBar
        android:id="@+id/discountSeekBar"
        style="@style/DefaultSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:progress="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/howMuchSellText2" />

    <com.credium.views.DiscountCashView
        android:id="@+id/discountCashView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/loansWithSameDataText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountSeekBar" />

    <TextView
        android:id="@+id/loansWithSameDataText"
        style="@style/SmallTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/loans_with_same_data_that_were_sold_within_a_week"
        app:layout_constraintBottom_toTopOf="@+id/discountCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discountCashView" />

    <android.support.v7.widget.CardView
        android:id="@+id/discountCardView"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loansWithSameDataText"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView5"
            style="@style/PercentageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="77%" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/submitButton"
        style="@style/BlueSolidButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_sell_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
